Regression: Pressing multiple modifier keys at the same time locks mouse click #109525

Closed
opened 2023-06-29 18:58:20 +02:00 by Gilberto Rodrigues · 17 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98
Cannot reproduce it on linux.

Blender Version
Broken: 3.4, 3.5, 3.6.0, 4.0alpha
Worked: 3.2 , 3.3.8

Short description of error
Pressing multiple modifier keys at the very same time, and holding them, makes the mouse clicks not work on the 3d viewport.
Sometimes only the first two mouse left clicks work. That can also can happen with only two modifier keys, like holding ctrl and shift at the same time in edit mode to pick shortest path, but with three modifier keys it is easier to reproduce it.

Exact steps for others to reproduce the error
new file
press left ctrl + left alt + left shift at the very same time and hold
left mouse click to togge the cube selection (if it works, you didn't press the modifier keys at the exact same time)
if it didn't work you found the bug.
you can also try this on edit mode (edge ring select).

video

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98 Cannot reproduce it on linux. **Blender Version** Broken: 3.4, 3.5, 3.6.0, 4.0alpha Worked: 3.2 , 3.3.8 **Short description of error** Pressing multiple modifier keys at the very same time, and holding them, makes the mouse clicks not work on the 3d viewport. Sometimes only the first two mouse left clicks work. That can also can happen with only two modifier keys, like holding ctrl and shift at the same time in edit mode to pick shortest path, but with three modifier keys it is easier to reproduce it. **Exact steps for others to reproduce the error** new file press left ctrl + left alt + left shift at the very same time and hold left mouse click to togge the cube selection (if it works, you didn't press the modifier keys at the exact same time) if it didn't work you found the bug. you can also try this on edit mode (edge ring select). [video](https://projects.blender.org/attachments/6aaf333a-3b82-453b-ae95-d6e6610f7d39)
Gilberto Rodrigues added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-29 18:58:20 +02:00
Collaborator

Couldn't reproduce on linux.

Couldn't reproduce on linux.

Reproduced with three and two keys in Win 10 22H2
Did not work for me in Blender releases below, including the one the OP says it worked on:
3.6.0 release June 27
3.3.8 release June 20
3.2.2 Aug 3, 22
3.2.1 Jul 6, 22
3.2.0 Jun 8, 22

CTRL + SHIFT + ALT and CTRL + SHIFT and ALT + SHIFT
respond to clicking on object in the viewport to select/deselect, but not outside an object in an empty space in the viewport.

CTRL and ALT alone, respond to neither.
SHIFT alone, responds to clicking on object, but not outside an object in an empty space in the viewport.

Could be the normal behavior.

Have to be very precise for three keys, pressing and holding all three keys at the very same time. Mouse becomes locked, it moves around, but no clicking, until you release the keys. And also confirmed, that sometimes it clicks haphazardly, a couple of times and then refuses to click after that.

Also, in the outliner, while holding the three keys and ALT+SHIFT, CTRL+ALT, objects are highlighted when you hover over them, but clicking does nothing, until you release the keys.

Reproduced with three and two keys in Win 10 22H2 Did not work for me in Blender releases below, including the one the OP says it worked on: 3.6.0 release June 27 3.3.8 release June 20 3.2.2 Aug 3, 22 3.2.1 Jul 6, 22 3.2.0 Jun 8, 22 CTRL + SHIFT + ALT and CTRL + SHIFT and ALT + SHIFT respond to clicking on object in the viewport to select/deselect, but not outside an object in an empty space in the viewport. CTRL and ALT alone, respond to neither. SHIFT alone, responds to clicking on object, but not outside an object in an empty space in the viewport. Could be the normal behavior. Have to be very precise for three keys, pressing and holding all three keys at the very same time. Mouse becomes locked, it moves around, but no clicking, until you release the keys. And also confirmed, that sometimes it clicks haphazardly, a couple of times and then refuses to click after that. Also, in the outliner, while holding the three keys and ALT+SHIFT, CTRL+ALT, objects are highlighted when you hover over them, but clicking does nothing, until you release the keys.

I cannot reproduce this with either the latest stable or current development versions of Blender.

But I noticed that the selection holding Ctrl behaves different from the rest. When holding Ctrl the selection needs to be made at the origin of the object instead of its geometry.

Could this be what the report is trying to describe?

Please try the latest daily build: https://builder.blender.org/download/ and de sure to use Factory Settings (Go to File → Defaults → Load Factory Settings)

I cannot reproduce this with either the latest stable or current development versions of Blender. But I noticed that the selection holding `Ctrl` behaves different from the rest. When holding `Ctrl` the selection needs to be made at the origin of the object instead of its geometry. Could this be what the report is trying to describe? Please try the latest daily build: https://builder.blender.org/download/ and de sure to use `Factory Settings` (Go to File → Defaults → Load Factory Settings)
Germano Cavalcante added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-06-30 20:50:59 +02:00

I can also reproduce it on the latest 4.0 build with factory settings, also on windows.
Can't reproduce it on linux .

I can also reproduce it on the latest 4.0 build with factory settings, also on windows. Can't reproduce it on linux .
Blender Bot added
Status
Archived
and removed
Status
Needs Information from User
labels 2023-07-02 08:02:41 +02:00
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-07-02 08:02:44 +02:00

Unable to replicate either on Windows.
@Gilberto.R hi, could you start blender with --debug-events argument from command line and check whether click is detected in windows console

Unable to replicate either on Windows. @Gilberto.R hi, could you start blender with [--debug-events](https://docs.blender.org/manual/en/latest/advanced/command_line/arguments.html#debug-options:~:text=value%3E%20on%20startup.-,%2D%2Ddebug%2Devents,-Enable%20debug%20messages) argument from command line and check whether click is detected in windows console
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-07-03 09:15:41 +02:00

@PratikPB2123 running with --debug-events the console goes crazy if I press the modifier keys at the same time. I've attached a video.

@PratikPB2123 running with --debug-events the console goes crazy if I press the modifier keys at the same time. I've attached a video.

Running --debug-events in blender 3.2 it works fine as i've reported, and the console looks alright, also attached a video below.

Running --debug-events in blender 3.2 it works fine as i've reported, and the console looks alright, also attached a video below.
Blender Bot added
Status
Archived
and removed
Status
Needs Information from User
labels 2023-07-03 22:14:02 +02:00
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-07-03 22:14:09 +02:00

Thanks. Still not able to replicate it locally.
Which keyboard layout is active?

Thanks. Still not able to replicate it locally. Which keyboard layout is active?

My keyboard layout is Portuguese (Brazil ABNT2)

My keyboard layout is Portuguese (Brazil ABNT2)

Thanks. I can notice some differences in selection based on cursor position.
Mouse click is detected when both modifiers keys are pressed but no hit is found over object.
@Gilberto.R , could you move cursor to the different position over cube and see if it selects the object?

(keyboard layout makes no difference, I can confirm with other keyboard layouts too)

Thanks. I can notice some differences in selection based on cursor position. Mouse click is detected when both modifiers keys are pressed but no hit is found over object. @Gilberto.R , could you move cursor to the different position over cube and see if it selects the object? (keyboard layout makes no difference, I can confirm with other keyboard layouts too)

Yes, I've tried moving the mouse, in this case we have to click near the object origin, but if I press the modifier keys at the same time it still doesn't work, with the mouse on the same location.

Yes, I've tried moving the mouse, in this case we have to click near the object origin, but if I press the modifier keys at the same time it still doesn't work, with the mouse on the same location.

Not sure why this happens though. Will forward to devs for further investigation.

Not sure why this happens though. Will forward to devs for further investigation.

I've bisected it.

" 37d835f0bc is the first bad commit
commit 37d835f0bc
Author: Campbell Barton campbell@blender.org
Date: Fri Aug 26 22:24:08 2022 +1000

Fix T100582: Windows-10 Switching Desktops locks Ctrl Key

Regression in recent fix for T66088 [0]. caused by much older problem
introduced with [1] & [2].

Unlike other platforms, as of [1] GHOST/Win32 was keeping track of the
pressed modifier keys.

Since GHOST/Win32 cleared the modifier state on window activation [2]
and only changes to modifier state would generate key events, activating
the window and releasing the modifier would not send the release event.

Resolve this by removing the stored modifier state from GHOST/Win32,
always passing modifier press/release events through to Blender
(matching other GHOST back-ends).
Instead, use key-repeat detection to prevent repeated modifier keys
from being generated - an alternate solution to T26446.

[0]: 8bc76bf4b957c51ddc5a13c6305f05c64b218a27
[1]: d6b43fed313b60bb6a269680b3c5622955b8a690
[2]: 6b987910e43ff5f91512a3c361ea3141590d4e45

intern/ghost/intern/GHOST_SystemWin32.cpp | 97 ++++++-------------------------
intern/ghost/intern/GHOST_SystemWin32.h | 27 +--------
2 files changed, 19 insertions(+), 105 deletions(-) "

I've bisected it. " 37d835f0bca28a7cbf577385d9828636e7811cc5 is the first bad commit commit 37d835f0bca28a7cbf577385d9828636e7811cc5 Author: Campbell Barton <campbell@blender.org> Date: Fri Aug 26 22:24:08 2022 +1000 Fix T100582: Windows-10 Switching Desktops locks Ctrl Key Regression in recent fix for T66088 [0]. caused by much older problem introduced with [1] & [2]. Unlike other platforms, as of [1] GHOST/Win32 was keeping track of the pressed modifier keys. Since GHOST/Win32 cleared the modifier state on window activation [2] and only changes to modifier state would generate key events, activating the window and releasing the modifier would not send the release event. Resolve this by removing the stored modifier state from GHOST/Win32, always passing modifier press/release events through to Blender (matching other GHOST back-ends). Instead, use key-repeat detection to prevent repeated modifier keys from being generated - an alternate solution to T26446. [0]: 8bc76bf4b957c51ddc5a13c6305f05c64b218a27 [1]: d6b43fed313b60bb6a269680b3c5622955b8a690 [2]: 6b987910e43ff5f91512a3c361ea3141590d4e45 intern/ghost/intern/GHOST_SystemWin32.cpp | 97 ++++++------------------------- intern/ghost/intern/GHOST_SystemWin32.h | 27 +-------- 2 files changed, 19 insertions(+), 105 deletions(-) "

Thanks for bisecting @Gilberto.R . Did not notice this is a regression

Thanks for bisecting @Gilberto.R . Did not notice this is a regression
Pratik Borhade changed title from Pressing multiple modifier keys at the same time locks mouse click to Regression: Pressing multiple modifier keys at the same time locks mouse click 2023-07-06 11:13:09 +02:00
Harley Acheson was assigned by Campbell Barton 2023-07-09 09:13:46 +02:00

While this commit points back to my commit: 37d835f0bc, I think it would be better to understand the problem and check if it can be resolves, instead of reverting back to the old behavior.

This would re-introduce logic where GHOST/WIN32 would keep track of held modifiers in a way that could get out of sync, causing bugs too. Furthermore, this caused behavior on WIN32 that didn't match Linux/macOS ... making changes to the event system more difficult (see #40317).

Harley has said he's able to investigate this, otherwise I can check on it although I'll need to setup a system running MS-Windows.

While this commit points back to my commit: 37d835f0bca28a7cbf577385d9828636e7811cc5, I think it would be better to understand the problem and check if it can be resolves, instead of reverting back to the old behavior. This would re-introduce logic where GHOST/WIN32 would keep track of held modifiers in a way that could get out of sync, causing bugs too. Furthermore, this caused behavior on WIN32 that didn't match Linux/macOS ... making changes to the event system more difficult (see #40317). Harley has said he's able to investigate this, otherwise I can check on it although I'll need to setup a system running MS-Windows.

I have a PR, but it will need lots of testing: #109991

I have a PR, but it will need lots of testing: https://projects.blender.org/blender/blender/pulls/109991
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2023-07-12 20:55:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109525
There is no content yet.